[package]
name = "rhinoceros"
version = "0.1.0"
edition = "2021"
description = "Playing with database concepts"
license = "GPLv3"
repository = "https://github.com/williamlucia/rhinoceros"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
